force-app/main/default/objects/Informe_de_Negociaci_n__c/Informe_de_Negociaci_n__c.object-meta.xml
<CustomObject>
    <label>Informe de Negociación</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Nombre de Informe de Negociación</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Informes de Negociación</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>