force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/A_o__c.field-meta.xml
<CustomField>
    <fullName>A_o__c</fullName>
    <formula>IF(Producto__c != null, Producto__r.Aniovehiculo__c, TEXT(Vehiculo__r.Anio_opcion__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Año</label>
    <type>Text</type>
</CustomField>