force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/All_Recibidos__c.field-meta.xml
<CustomField>
    <fullName>All_Recibidos__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recibos</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AllRecibidos__c.CodigoCliente__c</field>
            <operation>equals</operation>
            <valueField>AllRecibidos__c.Informe_de_Negociaci_n__r.C_digo_de_Cliente__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AllRecibidos__c</referenceTo>
    <relationshipLabel>Informes de Negociación</relationshipLabel>
    <relationshipName>Informes_de_Negociaci_n</relationshipName>
    <type>Lookup</type>
</CustomField>