force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/AnioIntercambio__c.field-meta.xml
<CustomField>
    <fullName>AnioIntercambio__c</fullName>
    <label>Año</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>