force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Aprobado_por__c.field-meta.xml
<CustomField>
    <fullName>Aprobado_por__c</fullName>
    <label>Aprobado por</label>
    <length>100</length>
    <type>Text</type>
</CustomField>