force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Aprobador_del_precio_minimo__c.field-meta.xml
<CustomField>
    <fullName>Aprobador_del_precio_minimo__c</fullName>
    <label>Aprobador del precio mínimo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>