force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Banco__c.field-meta.xml
<CustomField>
    <fullName>Banco__c</fullName>
    <formula>Text(Oportunidad__r.Banco__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Banco</label>
    <type>Text</type>
</CustomField>