force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Banco_US__c.field-meta.xml
<CustomField>
    <fullName>Banco_US__c</fullName>
    <label>Banco US$</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>