force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/C_digo_de_Cliente__c.field-meta.xml
<CustomField>
    <fullName>C_digo_de_Cliente__c</fullName>
    <formula>Oportunidad__r.Account.CodigoCliente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código de Cliente</label>
    <type>Text</type>
</CustomField>