force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/C_Modelo__c.field-meta.xml
<CustomField>
    <fullName>C_Modelo__c</fullName>
    <formula>IF(Producto__c != null,
Producto__r.Name,
Vehiculo__r.Submodelo__r.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modelo</label>
    <type>Text</type>
</CustomField>