force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Cantidad_de_Accesorios__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_Accesorios__c</fullName>
    <label>Cantidad de Accesorios</label>
    <summarizedField>Accesorios_del_informe__c.Cantidad__c</summarizedField>
    <summaryForeignKey>Accesorios_del_informe__c.InformeNegociacion__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>