force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Chasis__c.field-meta.xml
<CustomField>
    <fullName>Chasis__c</fullName>
    <label>Chasis</label>
    <length>50</length>
    <type>Text</type>
</CustomField>