force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Color_Externo__c.field-meta.xml
<CustomField>
    <fullName>Color_Externo__c</fullName>
    <label>Color Externo</label>
    <length>150</length>
    <type>Text</type>
</CustomField>