force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Color_Interno__c.field-meta.xml
<CustomField>
    <fullName>Color_Interno__c</fullName>
    <formula>Producto__r.Codigocolorinterno__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Color Interno</label>
    <type>Text</type>
</CustomField>