force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Concepto_recibo__c.field-meta.xml
<CustomField>
    <fullName>Concepto_recibo__c</fullName>
    <formula>All_Recibidos__r.Concepto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Concepto recibo</label>
    <type>Text</type>
</CustomField>