force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Concepto_recibo_bancario__c.field-meta.xml
<CustomField>
    <fullName>Concepto_recibo_bancario__c</fullName>
    <formula>Recibo_Bancario__r.Concepto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Concepto recibo bancario</label>
    <type>Text</type>
</CustomField>