force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Consecutivo_del_Informe__c.field-meta.xml
<CustomField>
    <fullName>Consecutivo_del_Informe__c</fullName>
    <displayFormat>{0000000}</displayFormat>
    <label>Consecutivo del Informe</label>
    <type>AutoNumber</type>
</CustomField>