force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Contacto_Comprador__c.field-meta.xml
<CustomField>
    <fullName>Contacto_Comprador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Comprador</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Informes de Negociación</relationshipLabel>
    <relationshipName>Informes_de_Negociaci_n</relationshipName>
    <type>Lookup</type>
</CustomField>