force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Conteo_accesorios__c.field-meta.xml
<CustomField>
    <fullName>Conteo_accesorios__c</fullName>
    <label>Conteo accesorios</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>