force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Cotizaci_n__c.field-meta.xml
<CustomField>
    <fullName>Cotizaci_n__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cotización</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Informes de Negociación</relationshipLabel>
    <relationshipName>Informes_de_Negociaci_n</relationshipName>
    <type>Lookup</type>
</CustomField>