force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Informes de Negociación (Cuenta)</relationshipLabel>
    <relationshipName>Informes_de_Negociaci_n1</relationshipName>
    <type>Lookup</type>
</CustomField>