force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Devolucion__c.field-meta.xml
<CustomField>
    <fullName>Devolucion__c</fullName>
    <description>Código de devolución para informes con factura cancelada</description>
    <label>Devolución</label>
    <length>255</length>
    <type>Text</type>
</CustomField>