force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Direcci_n__c.field-meta.xml
<CustomField>
    <fullName>Direcci_n__c</fullName>
    <formula>Oportunidad__r.Account.Direccion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dirección</label>
    <type>Text</type>
</CustomField>