force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Error_sincronizacion_WS__c.field-meta.xml
<CustomField>
    <fullName>Error_sincronizacion_WS__c</fullName>
    <label>Error sincronización WS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>