force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <defaultValue>&quot;Esperando aprobacion&quot;</defaultValue>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Esperando aprobacion</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>