force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Estado_de_aprobaci_n__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_aprobaci_n__c</fullName>
    <description>Para probar process que actuliza el estatus de los accesorois si tiene valor aprobado</description>
    <label>Estado de aprobación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>