force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Estado_de_la_factura__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_la_factura__c</fullName>
    <label>Estado de la factura</label>
    <length>50</length>
    <type>Text</type>
</CustomField>