force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Exchange_Rate_By_Date__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate_By_Date__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exchange Rate By Date</label>
    <referenceTo>Exchange_Rate_By_Date__c</referenceTo>
    <relationshipLabel>Informes de Negociación</relationshipLabel>
    <relationshipName>Informes_de_Negociaci_n</relationshipName>
    <type>Lookup</type>
</CustomField>