force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Exento__c.field-meta.xml
<CustomField>
    <fullName>Exento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exento de imp. aduaneros</label>
    <type>Checkbox</type>
</CustomField>