force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/factura__c.field-meta.xml
<CustomField>
    <fullName>factura__c</fullName>
    <label>Numero de factura</label>
    <length>50</length>
    <type>Text</type>
</CustomField>