force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Factura_WS__c.field-meta.xml
<CustomField>
    <fullName>Factura_WS__c</fullName>
    <label>Factura WS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>