force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Facturar_a_nombre_de__c.field-meta.xml
<CustomField>
    <fullName>Facturar_a_nombre_de__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facturar a nombre de</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Informes de Negociación</relationshipLabel>
    <relationshipName>Informes_de_Negociaci_n</relationshipName>
    <type>Lookup</type>
</CustomField>