force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Fecha_de_aprobaci_n__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_aprobaci_n__c</fullName>
    <label>Fecha de aprobación</label>
    <type>Date</type>
</CustomField>