force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Fecha_de_devolucion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_devolucion__c</fullName>
    <description>Fecha de devolución para informes con factura cancelada</description>
    <label>Fecha de devolución</label>
    <type>Date</type>
</CustomField>