force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Fecha_de_ultima_facturacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_ultima_facturacion__c</fullName>
    <description>Campo del ultimo seteo de facturacion para informes de motos</description>
    <label>Fecha de última facturación</label>
    <type>Date</type>
</CustomField>