force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/fechacreacion__c.field-meta.xml
<CustomField>
    <fullName>fechacreacion__c</fullName>
    <label>Fecha creación factura</label>
    <type>Date</type>
</CustomField>