force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/fechafactura__c.field-meta.xml
<CustomField>
    <fullName>fechafactura__c</fullName>
    <label>Fecha de facturacion</label>
    <type>Date</type>
</CustomField>