force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/fechamod__c.field-meta.xml
<CustomField>
    <fullName>fechamod__c</fullName>
    <label>Fecha de modificacion factura</label>
    <type>Date</type>
</CustomField>