force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Forma_de_Pago__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_Pago__c</fullName>
    <label>Forma de Pago</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Depositos bancarios</fullName>
            </value>
            <value>
                <fullName>Efectivo</fullName>
            </value>
            <value>
                <fullName>Tarjeta</fullName>
            </value>
            <value>
                <fullName>Transferencia bancaria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>