force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Forma_de_Pago_Informe__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_Pago_Informe__c</fullName>
    <label>Forma de Adquisición</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contado</fullName>
            </value>
            <value>
                <fullName>Financiamiento Bancario</fullName>
            </value>
            <value>
                <fullName>Ciclo Casa Pellas</fullName>
            </value>
            <value>
                <fullName>Go Leasing</fullName>
            </value>
            <value>
                <fullName>Tasa 0</fullName>
            </value>
            <value>
                <fullName>Financiamiento</fullName>
            </value>
            <value>
                <fullName>Aún no desea realizar su compra</fullName>
                <isActive>false</isActive>
                <label>Aún no desea realizar su compra</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>