force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/horamod__c.field-meta.xml
<CustomField>
    <fullName>horamod__c</fullName>
    <label>Hora de modificacion factura</label>
    <type>Time</type>
</CustomField>