force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Horario_de_aprobacion__c.field-meta.xml
<CustomField>
    <fullName>Horario_de_aprobacion__c</fullName>
    <label>Horario de aprobacion</label>
    <type>DateTime</type>
</CustomField>