force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Id_Producto_de_oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Id_Producto_de_oportunidad__c</fullName>
    <label>Id Producto de oportunidad</label>
    <length>50</length>
    <type>Text</type>
</CustomField>