force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Imp_Aduanas__c.field-meta.xml
<CustomField>
    <fullName>Imp_Aduanas__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Imp. Aduanas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>