force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Informe_de_autolote__c.field-meta.xml
<CustomField>
    <fullName>Informe_de_autolote__c</fullName>
    <formula>CONTAINS(Oportunidad__r.RecordType.DeveloperName, &quot;Autolote&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Informe de autolote</label>
    <type>Checkbox</type>
</CustomField>