force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/InformeId__c.field-meta.xml
<CustomField>
    <fullName>InformeId__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InformeId</label>
    <type>Text</type>
</CustomField>