force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/InformeSincronizado__c.field-meta.xml
<CustomField>
    <fullName>InformeSincronizado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Informe sincronizado</label>
    <type>Checkbox</type>
</CustomField>