force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/KilometrajeIntercambio__c.field-meta.xml
<CustomField>
    <fullName>KilometrajeIntercambio__c</fullName>
    <label>Kilometraje</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>