force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Marca_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Marca_Oportunidad__c</fullName>
    <formula>Oportunidad__r.Marca_UDC__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marca</label>
    <type>Text</type>
</CustomField>