force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/MarcaIntercambio__c.field-meta.xml
<CustomField>
    <fullName>MarcaIntercambio__c</fullName>
    <label>Marca Int</label>
    <length>50</length>
    <type>Text</type>
</CustomField>