force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/ModeloIntercambio__c.field-meta.xml
<CustomField>
    <fullName>ModeloIntercambio__c</fullName>
    <label>Modelo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>