force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Monto_total_del_informe__c.field-meta.xml
<CustomField>
    <fullName>Monto_total_del_informe__c</fullName>
    <formula>total_negociado__c - (Total_Accesorios__c + Total_Recibos__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo pendiente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>