force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Motor__c.field-meta.xml
<CustomField>
    <fullName>Motor__c</fullName>
    <label>Motor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>