force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/N_mero_de_la_oportunidad__c.field-meta.xml
<CustomField>
    <fullName>N_mero_de_la_oportunidad__c</fullName>
    <label>Número de la oportunidad</label>
    <length>50</length>
    <type>Text</type>
</CustomField>