force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/No_Factura_WS__c.field-meta.xml
<CustomField>
    <fullName>No_Factura_WS__c</fullName>
    <label>No Factura WS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>