force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/No_Tel_fono__c.field-meta.xml
<CustomField>
    <fullName>No_Tel_fono__c</fullName>
    <formula>Cuenta__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No. Teléfono</label>
    <type>Text</type>
</CustomField>