force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Nombre_de_la_oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_la_oportunidad__c</fullName>
    <formula>Oportunidad__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de la oportunidad</label>
    <type>Text</type>
</CustomField>