force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Nombre_del_cliente__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_cliente__c</fullName>
    <formula>IF(Facturar_a_nombre_de__r.IsPersonAccount,Facturar_a_nombre_de__r.FirstName &amp; &quot; &quot; &amp; Facturar_a_nombre_de__r.LastName, Facturar_a_nombre_de__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comprador</label>
    <type>Text</type>
</CustomField>