force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Informes de Negociación</relationshipLabel>
    <relationshipName>Informes_de_Negociaci_n</relationshipName>
    <type>Lookup</type>
</CustomField>