force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/OrdenAbierta__c.field-meta.xml
<CustomField>
    <fullName>OrdenAbierta__c</fullName>
    <label>OrdenAbierta</label>
    <length>10</length>
    <type>Text</type>
</CustomField>