force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Pendiente_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Pendiente_de_pago__c</fullName>
    <description>Monto pendiente de pago</description>
    <label>Pendiente de pago</label>
    <length>10</length>
    <type>Text</type>
</CustomField>