force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Precio_de_Lista_cordobas__c.field-meta.xml
<CustomField>
    <fullName>Precio_de_Lista_cordobas__c</fullName>
    <formula>Precio_de_Lista_sin_IMP__c *  Tasa_Cambio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio de Lista Córdobas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>