force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Precio_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Precio_de_Venta__c</fullName>
    <label>Precio de Venta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>