force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Precio_Total_V__c.field-meta.xml
<CustomField>
    <fullName>Precio_Total_V__c</fullName>
    <label>Precio Total Vehiculo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>