force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Precio_USD_Intercambio__c.field-meta.xml
<CustomField>
    <fullName>Precio_USD_Intercambio__c</fullName>
    <label>Precio USD$</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>