force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Prima__c.field-meta.xml
<CustomField>
    <fullName>Prima__c</fullName>
    <formula>All_Recibidos__r.MontoAplicado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prima USD$</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>