force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Prima_USD__c.field-meta.xml
<CustomField>
    <fullName>Prima_USD__c</fullName>
    <label>Prima USD$</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>