force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Informes de Negociación</relationshipLabel>
    <relationshipName>Informes_de_Negociaci_n</relationshipName>
    <type>Lookup</type>
</CustomField>