force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Recibo_Bancario__c.field-meta.xml
<CustomField>
    <fullName>Recibo_Bancario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recibo Bancario</label>
    <referenceTo>AllRecibidos__c</referenceTo>
    <relationshipLabel>Informes de Negociación (Recibo Bancario)</relationshipLabel>
    <relationshipName>Informes_de_Negociaci_n1</relationshipName>
    <type>Lookup</type>
</CustomField>