force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Recibo_Intercambio__c.field-meta.xml
<CustomField>
    <fullName>Recibo_Intercambio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recibo Intercambio</label>
    <referenceTo>AllRecibidos__c</referenceTo>
    <relationshipLabel>Informes de Negociación (Recibo Intercambio)</relationshipLabel>
    <relationshipName>Informes_de_Negociaci_n2</relationshipName>
    <type>Lookup</type>
</CustomField>