force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Reservar__c.field-meta.xml
<CustomField>
    <fullName>Reservar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reservar</label>
    <type>Checkbox</type>
</CustomField>