force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Sincronizacion_WS__c.field-meta.xml
<CustomField>
    <fullName>Sincronizacion_WS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sincronización WS (Factura)</label>
    <type>Checkbox</type>
</CustomField>