force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Solicitar_accesorios__c.field-meta.xml
<CustomField>
    <fullName>Solicitar_accesorios__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solicitar accesorios</label>
    <type>Checkbox</type>
</CustomField>