force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Sucursal__c</fullName>
    <formula>text(Oportunidad__r.Sucursal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sucursal</label>
    <type>Text</type>
</CustomField>