force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/T_C__c.field-meta.xml
<CustomField>
    <fullName>T_C__c</fullName>
    <label>T.C</label>
    <length>10</length>
    <type>Text</type>
</CustomField>