force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Tasa_Cambio__c.field-meta.xml
<CustomField>
    <fullName>Tasa_Cambio__c</fullName>
    <formula>Exchange_Rate_By_Date__r.Tasa__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tasa de cambio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>