force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Texto_Bandera__c.field-meta.xml
<CustomField>
    <fullName>Texto_Bandera__c</fullName>
    <description>Campo auxiliar para manejar los procesos de aprobacion de motos</description>
    <label>Texto Bandera</label>
    <length>255</length>
    <type>Text</type>
</CustomField>