force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Total_Accesorios__c.field-meta.xml
<CustomField>
    <fullName>Total_Accesorios__c</fullName>
    <label>Total Accesorios</label>
    <summarizedField>Accesorios_del_informe__c.Total_Accesorios__c</summarizedField>
    <summaryForeignKey>Accesorios_del_informe__c.InformeNegociacion__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>