force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/total_negociado__c.field-meta.xml
<CustomField>
    <fullName>total_negociado__c</fullName>
    <description>El monto total de la negociación, que determinara el monto de descuento especial y el IVA en el informe</description>
    <inlineHelpText>El monto total de la negociación</inlineHelpText>
    <label>Total Negociado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>