force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Total_Recibos__c.field-meta.xml
<CustomField>
    <fullName>Total_Recibos__c</fullName>
    <label>Total Recibos</label>
    <summarizedField>Recibos_de_la_negociaci_n__c.Monto_aplicado_a_la_negociaci_n__c</summarizedField>
    <summaryForeignKey>Recibos_de_la_negociaci_n__c.Informe_de_Negociaci_n__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>