force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Vehiculo__c.field-meta.xml
<CustomField>
    <fullName>Vehiculo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehículo</label>
    <referenceTo>Vehiculo__c</referenceTo>
    <relationshipLabel>Informes de Negociación</relationshipLabel>
    <relationshipName>Informes_de_Negociacion</relationshipName>
    <type>Lookup</type>
</CustomField>