force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/Vendedor__c.field-meta.xml
<CustomField>
    <fullName>Vendedor__c</fullName>
    <formula>Oportunidad__r.Owner.FirstName  &amp; &apos; &apos;  &amp;  Oportunidad__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendedor</label>
    <type>Text</type>
</CustomField>