force-app/main/default/objects/Informe_de_Negociaci_n__c/fields/X15_I_V__c.field-meta.xml
<CustomField>
    <fullName>X15_I_V__c</fullName>
    <defaultValue>false</defaultValue>
    <label>El cliente paga IVA?</label>
    <type>Checkbox</type>
</CustomField>