force-app/main/default/objects/Informe_de_Negociaci_n__c/validationRules/Monto_pendiente_menor_a_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Monto_pendiente_menor_a_0</fullName>
    <active>true</active>
    <description>El monto pendiente no puede ser menor a 0</description>
    <errorConditionFormula>Monto_total_del_informe__c &lt; 0</errorConditionFormula>
    <errorMessage>El monto pendiente no puede ser menor a 0. Revise los datos.</errorMessage>
</ValidationRule>